--- a/jupyter-labs-spacex-data-collection-api-v2.ipynb
+++ b/jupyter-labs-spacex-data-collection-api-v2.ipynb
@@ -121,25 +121,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: requests in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (2.32.2)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (from requests) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (from requests) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (from requests) (2.2.2)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (from requests) (2024.8.30)\n",
-      "Requirement already satisfied: pandas in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (2.2.2)\n",
-      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (from pandas) (1.26.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Requirement already satisfied: numpy in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (1.26.4)\n"
+      "Requirement already satisfied: requests in c:\\users\\mabd0\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.32.3)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\mabd0\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests) (3.4.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\mabd0\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\mabd0\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests) (2.3.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\mabd0\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests) (2024.12.14)\n"
      ]
     }
    ],
    "source": [
-    "!pip install requests\n",
-    "!pip install pandas\n",
-    "!pip install numpy"
+    "%pip install requests\n"
    ]
   },
   {
@@ -2256,7 +2248,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2270,7 +2262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   },
   "prev_pub_hash": "92824028eda7944e05c2baeff74c9c993a71bef91bed7cfa139749fe49c6405a"
  },
