--- a/jupyter-labs-webscraping.ipynb
+++ b/jupyter-labs-webscraping.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "14cb1575-916d-4bb7-96ad-e93eb46c6d3d",
    "metadata": {},
    "outputs": [
@@ -131,15 +131,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: beautifulsoup4 in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (4.12.3)Note: you may need to restart the kernel to use updated packages.\n",
+      "Collecting beautifulsoup4\n",
+      "  Downloading beautifulsoup4-4.12.3-py3-none-any.whl.metadata (3.8 kB)\n",
+      "Collecting soupsieve>1.2 (from beautifulsoup4)\n",
+      "  Downloading soupsieve-2.6-py3-none-any.whl.metadata (4.6 kB)\n",
+      "Downloading beautifulsoup4-4.12.3-py3-none-any.whl (147 kB)\n",
+      "Downloading soupsieve-2.6-py3-none-any.whl (36 kB)\n",
+      "Installing collected packages: soupsieve, beautifulsoup4\n",
+      "Successfully installed beautifulsoup4-4.12.3 soupsieve-2.6\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: requests in c:\\users\\mabd0\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.32.3)Note: you may need to restart the kernel to use updated packages.\n",
       "\n",
-      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (from beautifulsoup4) (2.5)\n",
-      "Requirement already satisfied: requests in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (2.32.2)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (from requests) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (from requests) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (from requests) (2.2.2)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\mabd0\\anaconda3\\lib\\site-packages (from requests) (2024.8.30)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\mabd0\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests) (3.4.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\mabd0\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\mabd0\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests) (2.3.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\mabd0\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests) (2024.12.14)\n"
      ]
     }
    ],
@@ -150,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "8920c88b-3865-4bbf-8f3c-1a1da57d0356",
    "metadata": {},
    "outputs": [],
@@ -2389,7 +2395,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2403,7 +2409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   },
   "prev_pub_hash": "64f1b0aac408997185c47caba18730e0028b75e7934a0e5bf0ae73c5cb7ba677"
  },
